<resources>
    <string name="app_name">Leuterio Realty</string>

    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_house_lot">House and Lot</string>
    <string name="nav_condominium">Condominium</string>
    <string name="nav_news_update">News and Updates</string>
    <string name="nav_inquiry">Inquiry</string>
    <string name="follow_up">Follow-up</string>
    <string name="nav_links">Links</string>
    <string name="search">Search</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pager_house_lots"><![CDATA[House & Lots]]></string>
    <string name="pager_condo">Condo</string>
    <string name="pager_random_properties">Random Properties</string>
    <string name="title_activity_news_updates">NewsUpdates</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_inquiry">Inquiry</string>
    <string name="title_activity_follo_up">FolloUp</string>
    <string name="title_activity_links">Links</string>
</resources>
